# LibFFmpeg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LibFFmpeg.pro  README.md
docs/: BuildFFmpeg.md
src/: Decoder.cpp  (+4 more)
src/app/: CMakeLists.txt  FilePacketComparer.cpp  FileProber.cpp  Formatting.h
src/lib/: CMakeLists.txt  Decoder.cpp  Decoder.h  Demuxer.cpp  Demuxer.h  LibFFmpeg.h
src/lib/AVCodec/: Channel.h
src/lib/AVCodec/wrappers/: AVChannelInternal.cpp  AVChannelInternal.h  AVCodecContextWrapper.cpp  AVCodecContextWrapper.h  AVCodecContextWrapperInternal.h  AVCodecDescriptorConversion.cpp  AVCodecDescriptorConversion.h  AVCodecDescriptorConversionInternal.h  AVCodecDescriptorWrapper.cpp  AVCodecDescriptorWrapper.h  AVCodecParametersWrapper.cpp  AVCodecParametersWrapper.h  AVCodecParametersWrapperInternal.h  AVCodecWrapper.cpp  AVCodecWrapper.h  AVCodecWrapperInternal.h  AVPacketWrapper.cpp  AVPacketWrapper.h  AVPacketWrapperInternal.h  CastCodecClasses.h
src/lib/AVFormat/wrappers/: AVCodecParametersWrapper.cpp  AVCodecParametersWrapper.h  AVFormatContextWrapper.cpp  AVFormatContextWrapper.h  AVFormatContextWrapperInternal.h  AVIOContextWrapper.cpp  AVIOContextWrapper.h  AVInputFormatWrapper.cpp  AVInputFormatWrapper.h  AVInputFormatWrapperInternal.h  AVStreamWrapper.cpp  AVStreamWrapper.h  AVStreamWrapperInternal.h  CastFormatClasses.h
src/lib/AVUtil/: ColorSpace.cpp  ColorSpace.h  MediaType.cpp  MediaType.h  PictureType.cpp  PictureType.h
src/lib/AVUtil/wrappers/: AVDictionaryWrapper.cpp  AVDictionaryWrapper.h  AVFrameSideDataWrapper.cpp  AVFrameSideDataWrapper.h  AVFrameSideDataWrapperInternal.h  AVFrameWrapper.cpp  AVFrameWrapper.h  AVFrameWrapperInternal.h  AVMotionVectorConversion.cpp  AVMotionVectorConversion.h  AVMotionVectorConversionInternal.h  AVPixFmtDescriptorConversion.cpp  AVPixFmtDescriptorConversion.h  AVPixFmtDescriptorConversionInternal.h  CastUtilClasses.h
src/lib/common/: ColorTypes.h  EnumMapper.h  Enums.h  Error.cpp  Error.h  FFMpegLibrariesTypes.cpp  FFMpegLibrariesTypes.h  Formatting.cpp  Formatting.h  Functions.cpp  Functions.h  InternalTypes.cpp  InternalTypes.h  Logging.h  MotionVector.cpp  MotionVector.h  Types.h  Version.cpp  Version.h
src/lib/libHandling/: FFmpegLibraries.cpp  FFmpegLibraries.h  FFmpegLibrariesBuilder.cpp  FFmpegLibrariesBuilder.h  FFmpegLibrariesInterface.cpp  FFmpegLibrariesInterface.h  FFmpegLibrariesInterfaceBuilder.cpp  FFmpegLibrariesInterfaceBuilder.h  IFFmpegLibraries.h  SharedLibraryLoader.cpp  SharedLibraryLoader.h  StaticCallbacks.cpp  StaticCallbacks.h  dylib.h
src/lib/libHandling/libraryFunctions/: AVFormatFunctions.cpp  AVFormatFunctions.h  AvCodecFunctions.cpp  AvCodecFunctions.h  AvUtilFunctions.cpp  AvUtilFunctions.h  Functions.cpp  Functions.h  SwResampleFunctions.cpp  SwResampleFunctions.h
src/lib/wrappers/: AVCodecContextWrapper.cpp  AVCodecContextWrapper.h  AVCodecIDWrapper.h  AVCodecParametersWrapper.cpp  AVCodecParametersWrapper.h  AVCodecWrapper.cpp  AVCodecWrapper.h  AVDictionaryWrapper.h  AVFormatContextWrapper.cpp  AVFormatContextWrapper.h  AVFrameSideDataWrapper.cpp  AVFrameSideDataWrapper.h  AVFrameWrapper.cpp  AVFrameWrapper.h  AVInputFormatWrapper.cpp  AVInputFormatWrapper.h  AVPacketWrapper.cpp  AVPacketWrapper.h  AVPixFmtDescriptorWrapper.cpp  AVPixFmtDescriptorWrapper.h  AVStreamWrapper.cpp  AVStreamWrapper.h  Functions.h
test/: CMakeLists.txt
test/common/: CMakeLists.txt  ComparisonFunctions.cpp  ComparisonFunctions.h  DebugFunctions.cpp  DebugFunctions.h  Functions.h
test/dummyLib/: CMakeLists.txt  dummyLib.cpp  dummyLib.h
test/ffmpegTest/: CMakeLists.txt  ffmpegTest.cpp
test/integration/: AVIOInputContextTest.cpp  CMakeLists.txt  DecodingTest.cpp  DemuxingTest.cpp  LibrariesLoadingTest.cpp  LibrariesWithLogging.h
test/unit/: CMakeLists.txt  SharedLibraryLoaderTest.cpp
test/unit/libHandling/: FFmpegLibrariesMoc.cpp  FFmpegLibrariesMoc.h  SharedLibraryLoaderTest.cpp
test/unit/wrappers/: RunTestForAllVersions.h  TestHelper.h
(+130 files in other folders)
